@@ -4,6 +4,11 @@
       back to text fails. They now make it clearer what part of the tree
       was problematic, and what the tree should have looked like.
     * Fixed the pkg-config file, which should now be usable
+  - API changes
+    * add function aug_ns_attr to allow iterating through a nodeset
+      quickly. See examples/dump.c for an example of how to use them
+      instead of aug_get, aug_label etc. and for a way to measure
+      performance gains.
   - Lens changes/additions
     * Sshd: split HostKeyAlgorithms into list of values
 
